# Gnumeric

./: Bugs.html  DeveloperProfile  Doxyfile  FunctionEditor.c  GNUmakefile  RCell.c  RConvert.c  RConvert.h  RFormat.c  RGnumeric.c  RGnumeric.h  RGnumericPlugin.c  RReadWritePlugin.c  RSheet.c  RSheet.h  RUtils.c  RUtils.h  RWorkbook.c  Todo.html  plugin-new.xml  plugin.xml
Docs/: Example.nw  GNUmakefile  Initialization.tex  QuickOverview.nw  RGnumericManual.nw  introduction.nw
Install/: Changes.html  DESCRIPTION.in  FAQ.html  GNUmakefile.admin  INSTALL.html  Makevars.in  README.html  Rconfig.h.in  Requirements.html  VersionInfo  cleanup.in  configure.in
Install/Web/: GNUmakefile  index.html.in
Src/: First.lib  align.S  cell.S  columns.S  eval.S  format.S  insert.S  register.S  sheet.S  version.S  workbook.S
examples/: ExampleProfile  Profile  bernoulli.S  cell  cellRef  comment  comment.S  define  example  format.S  formatting  getFormat  getFunctions.S  graphics  hist.S  index.html  lm  lm.S  lmResults  newSheet  readTest.rgn  regress.S  remove  removeSheet  sheetAccess  showFunctions  stop  subset  testRef  testSheet  timer.S  varArgs
man/: CellRefElements.xml  GNUmakefile  SheetElements.xml  WorkbookMethods.xml  clearSheet.xml  createCellFormat.xml  formatCell.xml  getCellFormat.xml  getFunctions.xml  getGnumericWorkbook.xml  getSheet.xml  getWorkbook.xml  gnumeric.hasSheetArgument.xml  hasSheetArgument.xml  insertMatrix.xml  newGnumericWorkbook.xml  newSheet.xml  newWorkbook.xml  recalcBook.xml  registerFunction.xml  sheet.xml  sheetMethods.xml  sheetRegion.xml  uniqueSheetName.xml
